--- a/chromieLinks.app/Contents/Info.plist
+++ b/chromieLinks.app/Contents/Info.plist
@@ -3,16 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
+<array>
+	<dict>
+		<key>CFBundleURLName</key>
+		<string>Chromie</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
 			<string>chromie</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>chromie</string>
-			</array>
-		</dict>
-	</array>
+		</array>
+	</dict>
+</array>
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -75,11 +75,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>388</real>
+		<real>718</real>
 		<key>savedFrame</key>
-		<string>30 103 846 672 0 0 1792 1097 </string>
+		<string>138 147 1406 922 0 0 1792 1097 </string>
 		<key>selectedTab</key>
-		<string>description</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
